// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TableItemComponent Should render item component 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flex": "1",
      "paddingBottom": "20px",
      "paddingLeft": "30px",
      "paddingTop": "20px",
    }
  }
/>
`;

exports[`TableItemComponent Should render item component with an external style and children 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flex": "1",
      "justifyContent": "start",
      "paddingBottom": "20px",
      "paddingLeft": "30px",
      "paddingTop": "20px",
    }
  }
>
  <p>
    I'm a children
  </p>
</div>
`;

exports[`TableItemComponent Should render item component with children 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flex": "1",
      "paddingBottom": "20px",
      "paddingLeft": "30px",
      "paddingTop": "20px",
    }
  }
>
  <p>
    I'm a children
  </p>
</div>
`;
